--- a/_includes/link-previews.html
+++ b/_includes/link-previews.html
@@ -6,7 +6,7 @@
   }
 
   #tooltip-wrapper {
-    background: red;
+    background: lightyellow;
     padding: 1em;
     border: 1px solid #ddd;
     border-radius: 4px;
